--- a/fonts/gf-icons/demo.html
+++ b/fonts/gf-icons/demo.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> gf-icons <small class="fgc1">(Glyphs:&nbsp;90)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> gf-icons <small class="fgc1">(Glyphs:&nbsp;91)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 20</h1>
@@ -336,19 +336,6 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e618" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe618;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix noLiga-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs1">
-			<div class="clearfix bshadow0 pbs">
-				<span class="gf-icon-cog"></span><span class="mls"> gf-icon-cog</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix">
-				<input type="text" readonly value="e619" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe619;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -966,6 +953,19 @@
 				<input type="text" readonly value="" class="liga unitRight" />
 			</div>
 		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="gf-icon-search"></span><span class="mls"> gf-icon-search</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e619" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe619;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 16</h1>
@@ -1184,6 +1184,19 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e659" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe659;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs2">
+			<div class="clearfix bshadow0 pbs">
+				<span class="gf-icon-cog"></span><span class="mls"> gf-icon-cog</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e65a" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe65a;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
