--- a/modelo.html
+++ b/modelo.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: Modelo
 id: home
 ---
 
@@ -23,7 +23,7 @@ id: home
 			</li>
 		</ul>
 
-		<div id="pesquisar" class="accordion">
+		<div class="accordion">
 			<div class="accord-header">pesquisar por fornecedor</div>
 			<div class="accord-content">
 				<form action="" method="get" accept-charset="utf-8">
@@ -146,7 +146,7 @@ id: home
 
 	<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>clique aqui e faça seu cadastro em menos de 1 minuto</span></a>
 
-	<section id="contentWrapper">
+	<section id="contentWrapper" class="container">
 		<div id="content">
 			<section class="eventos">
 				<h1>Eventos em <b>Destaque</b> </h1>
