Atualizando pagina de modelo

--- a/modelo.html
+++ b/modelo.html
@@ -1,229 +1,23 @@
 ---
 layout: default
 title: Modelo
-id: home
+id:
 ---
-
-	<section id="banner">
-		<ul>
-			<li style="background-image: url(imgTemp/banner1.jpg);">
-				<a href="#" title="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
-			</li>
-			<li style="background-image: url(imgTemp/banner2.jpg);">
-				<a href="#" title="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</a>
-			</li>
-			<li style="background-image: url(imgTemp/banner3.jpg);">
-				<a href="#" title="">Nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-			</li>
-			<li style="background-image: url(imgTemp/banner4.jpg);">
-				<a href="#" title="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</a>
-			</li>
-			<li style="background-image: url(imgTemp/banner5.jpg);">
-				<a href="#" title="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a>
-			</li>
-		</ul>
-
-		<div class="accordion">
-			<div class="accord-header">pesquisar por fornecedor</div>
-			<div class="accord-content">
-				<form action="" method="get" accept-charset="utf-8">
-					<select>
-						<option>Escolha o tipo de evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select>
-						<option>Características do evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select>
-						<option>Serviços oferecidos pelo evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="uf">
-						<option>UF</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="cidade">
-						<option>Cidade</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="bairro">
-						<option>Bairro</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-
-					<button type="">Pesquisar</button>
-				</form>
-			</div>
-
-			<div class="accord-header active">pesquisar por evento</div>
-			<div class="accord-content pesquisa">
-				<form action="" method="get" accept-charset="utf-8">
-					<select>
-						<option>Escolha o tipo de evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select>
-						<option>Características do evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select>
-						<option>Serviços oferecidos pelo evento</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="uf">
-						<option>UF</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="cidade">
-						<option>Cidade</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-					<select class="bairro">
-						<option>Bairro</option>
-						<option>Alpha</option>
-						<option>Betta</option>
-						<option>Gama</option>
-						<option>Kappa</option>
-						<option>Omega</option>
-					</select>
-
-					<div class="periodo">
-						<label for="dataPesquisa">Período</label>
-						<input type="text" name="dataPesquisa" id="dataPesquisa" value="" /> 
-					</div>
-
-					<button type="">Pesquisar</button>
-				</form>
-			</div>
+	<section id="pageHeader">
+		<div class="container_12">
+			<h1>{{ page.title }}</h1>
+			<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>cadastre-se em menos de 1 minuto</span></a>
 		</div>
-
 	</section>
 
-	<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>clique aqui e faça seu cadastro em menos de 1 minuto</span></a>
-
-	<section id="contentWrapper" class="container">
+	<section id="contentWrapper">
 		<div id="content">
-			<section class="eventos">
-				<h1>Eventos em <b>Destaque</b> </h1>
-				<a href="#" title="">Ver todos</a>
-				<div>
-					<a href="#" style="background-image: url(imgTemp/evento1.jpg);">
-						<div class="date">08<span>Ago</span></div>
-						<div class="caption">
-							<h2>Michel Teló ao vivo</h2>
-							<p>Pela primeira vez Michel Teló e Claudia Leitte se uniram num mesmo show onde além dos sucessos de cada um gravaram a música da torcida Garoto.</p>
-						</div>
-					</a>
-					<a href="#" style="background-image: url(imgTemp/evento2.jpg);">
-						<div class="date">08<span>Ago</span></div>
-						<div class="caption">
-							<h2>13º Red bull Flug Tag - Brasília</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</a>
-					<a href="#" style="background-image: url(imgTemp/evento3.jpg);">
-						<div class="date">08<span>Ago</span></div>
-						<div class="caption">
-							<h2>Feira de tecnologia</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</a>
-					<a href="#" style="background-image: url(imgTemp/evento4.jpg);">
-						<div class="date">08<span>Ago</span></div>
-						<div class="caption">
-							<h2>Coca cola Beach</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div>
-					</a>
-					<a href="#" style="background-image: url(imgTemp/evento7.jpg);">
-						<div class="date">08<span>Ago</span></div>
-						<div class="caption">
-							<h2>X Factor</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						</div>
-					</a>
-				</div>
-			</section>
+			<section> 
+				<img src="{{ site.url }}/imgTemp/content-horizontal.jpg" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-			<section class="palavraPresidente">
-				<h1>palavra do <b>presidente</b> </h1>
-				<img src="{{ site.url }}/imgTemp/presidente.jpg" alt="">
-				<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-
-				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-			</section>
-
-			<section class="noticias">
-				<h1><b>NOTÍCIAS</b> DO SINDICATO</h1>
-				<ul>
-					<li>
-						<h2><a href="#" title="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phas ellus hendrerit. Pellentesque aliquet nibh nec urna</a></h2>
-						<div class="breadcrumb">
-							<span>PUBLICADO EM: <a href="" title="">NOTÍCIAS</a> NO DIA 08/08/2013</span>
-						</div>
-						<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-					</li>
-					<li>
-						<h2><a href="#" title="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phas ellus hendrerit. Pellentesque aliquet nibh nec urna</a></h2>
-						<div class="breadcrumb">
-							<span>PUBLICADO EM: <a href="" title="">NOTÍCIAS</a> NO DIA 08/08/2013</span>
-						</div>
-						<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-					</li>
-					<li>
-						<h2><a href="#" title="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phas ellus hendrerit. Pellentesque aliquet nibh nec urna</a></h2>
-						<div class="breadcrumb">
-							<span>PUBLICADO EM: <a href="" title="">NOTÍCIAS</a> NO DIA 08/08/2013</span>
-						</div>
-						<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-					</li>
-				</ul>
-				<a href="#" title="">ver todas as <b>NOTÍCIAS</b> DO SINDICATO</a>
+				<h3>Lorem ipsum solor</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
 
 		</div>
