Home + Sindicato + Servicos Finalizada

--- a/o_sindicato.html
+++ b/o_sindicato.html
@@ -4,46 +4,85 @@ title: O Sindicato
 id: sindicato
 ---
 	<section id="pageHeader">
-		<div class="container_12">
+		<div class="wrapper">
 			<h1>{{ page.title }}</h1>
 			<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>cadastre-se em menos de 1 minuto</span></a>
 		</div>
 	</section>
 
 	<section id="contentWrapper">
-		<div id="content">
+		<div class="wrapper">
 			<section> 
-				<img src="{{ site.url }}/imgTemp/content-horizontal.jpg" alt="">
+				<h2 class="greenTitle">Quem somos</h2>
+				<img src="{{ site.url }}imgTemp/content-horizontal.jpg" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 				<h3>Lorem ipsum solor</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
 
-			<section class="grid_4">
-				<img src="{{ site.url }}/imgTemp/content-square.jpg" alt="">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</section>
-
-			<section class="grid_4">
-				<img src="{{ site.url }}/imgTemp/content-square.jpg" alt="">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</section>
-
-			<section class="grid_4">
-				<img src="{{ site.url }}/imgTemp/content-square.jpg" alt="">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</section>
-
 			<section class="palavraPresidente">
-				<h1>palavra do <b>presidente</b> </h1>
-				<img src="{{ site.url }}/imgTemp/presidente.jpg" alt="">
+				<h2 class="greenTitle">Palavra do presidente </h2>
+				<img src="{{ site.url }}imgTemp/presidente.jpg" alt="">
 				<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 
 				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 			</section>
 
+			<ul class="equipe">
+				<h2 class="greenTitle">Equipe</h2>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe1.jpg" alt="">
+					<h3>Brandon Pitt</h3>
+					<h4><b>Presidente</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe2.jpg" alt="">
+					<h3>Brandon Pitt</h3>
+					<h4><b>Gerente de projetos</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe3.jpg" alt="">
+					<h3>Lindsay Lohan</h3>
+					<h4><b>Diretor financeiro</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe4.jpg" alt="">
+					<h3>Tom Cruise</h3>
+					<h4><b>Advogado</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe5.jpg" alt="">
+					<h3>Daniella Cicarelli</h3>
+					<h4><b>Marketing</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe6.jpg" alt="">
+					<h3>Adriana Lima</h3>
+					<h4><b>Relações públicas</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe7.jpg" alt="">
+					<h3>Tom Cruise</h3>
+					<h4><b>Estagiário</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+				<li>
+					<img src="{{ site.url }}imgTemp/equipe8.jpg" alt="">
+					<h3>Adriana Lima</h3>
+					<h4><b>Designer</b> </h4>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</li>
+			</ul>
+
 		</div>
+
 		<div id="sidebar">
 {% include sidebar.html %}
 		</div>
