--- a/teste.html
+++ b/teste.html
@@ -147,8 +147,8 @@ id: home
 	<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>clique aqui e faça seu cadastro em menos de 1 minuto</span></a>
 
 	<section id="contentWrapper">
-		<div class="wrapper">
-			<section class="eventos">
+		<div class="wrapper eventos">
+			<section class="grid_12">
 				<h1>Eventos em <b>Destaque</b> </h1>
 				<a href="#" title="">Ver todos</a>
 				<div>
@@ -189,16 +189,18 @@ id: home
 					</a>
 				</div>
 			</section>
-
-			<section class="palavraPresidente">
+		</div>
+		<div class="wrapper palavraPresidente">
+			<section class="grid_12">
 				<h1>palavra do <b>presidente</b> </h1>
 				<img src="{{ site.url }}imgTemp/presidente.jpg" alt="">
 				<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 
 				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 			</section>
-
-			<section class="noticias">
+		</div>
+		<div class="wrapper noticias">
+			<section class="grid_12">
 				<h1><b>NOTÍCIAS</b> DO SINDICATO</h1>
 				<ul>
 					<li>
