Eventos + Sala de imprensa + Parceiros + curriculo

--- a/parceiros.html
+++ b/parceiros.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Serviços
-id: servicos
+title: Parceiros e Convênios
+id: parceiros
 ---
 	<section id="pageHeader">
 		<div class="wrapper">
@@ -12,9 +12,8 @@ id: servicos
 
 	<section id="contentWrapper">
 		<div class="wrapper">
-
 			<section class="slider">
-				<h2 class="greenTitle">Serviços em destaque</h2>
+				<h2 class="greenTitle">Parceria ou convênio em destaque</h2>
 				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 				
 				<div id="galeria_foto" class="flexslider">
@@ -52,7 +51,7 @@ id: servicos
 			</section>
 
 			<section class="listHorizontal">
-				<h2 class="greenTitle">Outros Serviços </h2>
+				<h2 class="greenTitle">Mais parcerias e convênios</h2>
 				<a href="#">
 					<img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" />
 					<h3>Alpha omega Kappa</h3>
