--- a/sala_de_imprensa.html
+++ b/sala_de_imprensa.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Serviços
-id: servicos
+title: Sala de imprensa
+id: sala_de_imprensa
 ---
 	<section id="pageHeader">
 		<div class="wrapper">
@@ -14,8 +14,8 @@ id: servicos
 		<div class="wrapper">
 
 			<section class="slider">
-				<h2 class="greenTitle">Serviços em destaque</h2>
-				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
+
+				<h2 class="greenTitle">Galeria de fotos</h2>
 				
 				<div id="galeria_foto" class="flexslider">
 					<ul class="slides">
@@ -51,30 +51,55 @@ id: servicos
 				</div>
 			</section>
 
-			<section class="listHorizontal">
-				<h2 class="greenTitle">Outros Serviços </h2>
-				<a href="#">
-					<img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" />
-					<h3>Alpha omega Kappa</h3>
-					<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat.</p>
-				</a>
-				<a href="#">
-					<img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" />
-					<h3>Alpha omega Kappa</h3>
-					<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat.</p>
-				</a>
-				<a href="#">
-					<img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" />
-					<h3>Alpha omega Kappa</h3>
-					<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat.</p>
-				</a>
-				<a href="#">
-					<img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" />
-					<h3>Alpha omega Kappa</h3>
-					<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat.</p>
-				</a>
-
+			<section class="slider">
+				<h2 class="greenTitle">Galeria de vídeos</h2>
+				
+				<div id="galeria_video" class="flexslider">
+					<ul class="slides">
+						<li>
+							<video width="760" height="430" controls>
+								 <source src="http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+							</video>
+						</li>
+						<li>
+							<video width="760" height="430" controls>
+								<source type="video/ogg" src="http://en.ony.ru/upload/BlocksPagesProperties/video_ogv/2e4a0e8ef12dde5ef2876bbe53950151.ogv">
+							</video>
+						</li>
+						<li>
+							<video width="760" height="430" controls>
+								<source type="video/mp4" src="http://www.madebyhangar.com/assets/videos/looped.mp4">
+							</video>
+						</li>
+						<li>
+							<video width="760" height="430" controls>
+								 <source src="http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+							</video>
+						</li>
+						<li>
+							<video width="760" height="430" controls>
+								<source type="video/ogg" src="http://en.ony.ru/upload/BlocksPagesProperties/video_ogv/2e4a0e8ef12dde5ef2876bbe53950151.ogv">
+							</video>
+						</li>
+						<li>
+							<video width="760" height="430" controls>
+								<source type="video/mp4" src="http://www.madebyhangar.com/assets/videos/looped.mp4">
+							</video>
+						</li>
+					</ul>
+				</div>
+				<div id="carousel_video" class="flexslider carousel">
+					<ul class="slides">
+						<li><img src="{{ site.url }}imgTemp/video1.jpg" /></li>
+						<li><img src="{{ site.url }}imgTemp/video2.jpg" /></li>
+						<li><img src="{{ site.url }}imgTemp/video3.jpg" /></li>
+						<li><img src="{{ site.url }}imgTemp/video1.jpg" /></li>
+						<li><img src="{{ site.url }}imgTemp/video2.jpg" /></li>
+						<li><img src="{{ site.url }}imgTemp/video3.jpg" /></li>
+					</ul>
+				</div>
 			</section>
+
 
 		</div>
 
