--- a/sindicalizados.html
+++ b/sindicalizados.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Serviços
-id: servicos
+title: Sindicalizados
+id: sindicalizados
 ---
 	<section id="pageHeader">
 		<div class="wrapper">
@@ -13,46 +13,33 @@ id: servicos
 	<section id="contentWrapper">
 		<div class="wrapper">
 
-			<section class="slider">
-				<h2 class="greenTitle">Serviços em destaque</h2>
+			<section>
+				<h2 class="greenTitle">Porque Sindicalizar</h2>
 				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-				
-				<div id="galeria_foto" class="flexslider">
-					<ul class="slides">
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-					</ul>
+			</section>
+
+			<section class="sindicalizar">
+				<h2 class="greenTitle">É simples, faça seu cadastro em 3 passos</h2>
+				<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
+				<div>
+					<img src="{{ site.url }}imgTemp/sindicalizar1.jpg" alt="">
+					<h3>Passo 1</h3>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
 				</div>
-				<div id="carousel_foto" class="flexslider carousel">
-					<ul class="slides">
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_lemon.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_donut.jpg" /></li>
-						<li><img src="{{ site.url }}imgTemp/kitchen_adventurer_caramel.jpg" /></li>
-					</ul>
+				<div>
+					<img src="{{ site.url }}imgTemp/sindicalizar2.jpg" alt="">
+					<h3>Passo 2</h3>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
+				</div>
+				<div>
+					<img src="{{ site.url }}imgTemp/sindicalizar3.jpg" alt="">
+					<h3>Passo 3</h3>
+					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
 				</div>
 			</section>
 
 			<section class="listHorizontal">
-				<h2 class="greenTitle">Outros Serviços </h2>
+				<h2 class="greenTitle">Outros Serviços</h2>
 				<a href="#">
 					<img src="{{ site.url }}imgTemp/kitchen_adventurer_cheesecake_brownie.jpg" />
 					<h3>Alpha omega Kappa</h3>
