Contato + associe-se + cursos + licitacoes + dicas + uteis

--- a/curriculo.html
+++ b/curriculo.html
@@ -51,7 +51,7 @@ id: curriculo
 						</div>
 					</div>
 				</div>
-				<button type="" onClick="location.href='obrigado.html'">Enviar currículo</button>
+				<input type="button" name="" value="Enviar currículo" onClick="location.href='obrigado.html'">
 			</form>
 		</div>
 
