--- a/distancias.html
+++ b/distancias.html
@@ -14,74 +14,74 @@ id: distancias
 		<div class="wrapper">
 			<section class="distanciaTable"> 
 				<div class="grid_12">
-					<table>
-					<thead>
-						<tr>
-							<th></th>
-							<th>Brasília</th>
-							<th>Taguatinga</th>
-							<th>Ceilândia</th>
-							<th>Gama</th>
-							<th>Riacho Fundo</th>
-							<th>Brazlândia</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Brasília</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-						<tr>
-							<td>Taguatinga</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-						<tr>
-							<td>Ceilândia</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-						<tr>
-							<td>Gama</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-						<tr>
-							<td>Riacho Fundo</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-						<tr>
-							<td>Brazlândia</td>
-							<td>0 km</td>
-							<td>10 km</td>
-							<td>20 km</td>
-							<td>30 km</td>
-							<td>40 km</td>
-							<td>50 km</td>
-						</tr>
-					</tbody>
+					<table class="tableStyle">
+						<thead>
+							<tr>
+								<th></th>
+								<th>Brasília</th>
+								<th>Taguatinga</th>
+								<th>Ceilândia</th>
+								<th>Gama</th>
+								<th>Riacho Fundo</th>
+								<th>Brazlândia</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Brasília</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+							<tr>
+								<td>Taguatinga</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+							<tr>
+								<td>Ceilândia</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+							<tr>
+								<td>Gama</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+							<tr>
+								<td>Riacho Fundo</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+							<tr>
+								<td>Brazlândia</td>
+								<td>0 km</td>
+								<td>10 km</td>
+								<td>20 km</td>
+								<td>30 km</td>
+								<td>40 km</td>
+								<td>50 km</td>
+							</tr>
+						</tbody>
 					</table>
 				</div>
 
