Responsivo IPAD + IPAD Landscape

--- a/distancias.html
+++ b/distancias.html
@@ -86,11 +86,11 @@ id: distancias
 				</div>
 
 				<form>
-					<div class="grid_6">
+					<div>
 						<label>Origem</label>
 						<input type="text">
 					</div>
-					<div class="grid_6">
+					<div>
 						<label>destino</label>
 						<input type="text">
 					</div>
